--- a/style.scss
+++ b/style.scss
@@ -1,11 +1,20 @@
+@import url("https://fonts.googleapis.com/css2?family=Gluten:wght@600;700&family=Lato:wght@300&display=swap");
+
 *{
     margin:0;
     padding:0;
 }
 
 body{
-    background: #092B40;
-    color:white;
+    font-family: "Lato", sans-serif;
+    color: #272a31;
+    background: rgb(202, 202, 202);
+    margin-top: 3em;
+    margin-left: 1em;
+    margin-right: 1em;
+    font-family: "Gluten", cursive;
+    font-style: normal;
+    line-height: 2rem;
 }
 
 .body{
@@ -91,4 +100,38 @@ input[type=text]:focus {
 @keyframes hide{
     from {width: 200px;}
     to {width:50px;}
+}
+
+.screenMessage {
+    display: none;
+    text-align: center;
+    font-size: 1.5rem;
+    margin-top: 1em;
+    margin-bottom: 1em;
+}
+
+#errorMessage {
+    color: rgb(184, 45, 45);
+}
+
+#noResultFound {
+    font-size: 1.5rem;
+}
+
+#loadingContent {
+    display: none;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    height: 120vh;
+    background-color: #232b258a;
+    position: absolute;
+    z-index: 300;
+    top: 0;
+    color: #ec5242;
+    font-size: 1.5rem;
+}
+
+.randomArticle {
+    color: #ec5242;
 }
